--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ dependencies = [
 ]
 
 [project.scripts]
-main = "src.main:main"
+brainlift-mcp = "src.server:main"
 oauth = "src.oauth_client:cli"
 
 [tool.uv]
@@ -22,3 +22,10 @@ package = true
 
 [tool.setuptools]
 packages = ["src"]
+
+[dependency-groups]
+dev = [
+    "mypy>=1.19.0",
+    "ruff>=0.14.7",
+    "types-requests>=2.32.4.20250913",
+]
